--- a/templates/template.html
+++ b/templates/template.html
@@ -14,7 +14,7 @@
     {{- if .Config.site.description }}
     <meta property="og:description" content="{{ .Config.site.description }}">
     {{- end }}
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/5.4.2/photoswipe.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/{{ .Config.PhotoSwipeVersion }}/photoswipe.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
     <link rel="stylesheet" href="assets/style.css">
   </head>
@@ -73,15 +73,15 @@
       import { JustifiedGrid } from 'https://cdn.skypack.dev/@egjs/grid';
       const options = {
         gap: 8,
-        columnRange: [1, 4],
-        sizeRange: [200, Infinity],
+        columnRange: [{{ .Config.layout.mincolumn }}, {{ .Config.layout.maxcolumn }}],
+        sizeRange: [{{ .Config.layout.minwidth }}, Infinity],
       };
       {{- range $section := .Sections }}
       (new JustifiedGrid(".section-images-{{ .Slug }}", options)).renderItems();
       {{- end }}
 
-      import PhotoSwipeLightbox from 'https://cdnjs.cloudflare.com/ajax/libs/photoswipe/5.4.2/photoswipe-lightbox.esm.min.js';
-      import PhotoSwipe from 'https://cdnjs.cloudflare.com/ajax/libs/photoswipe/5.4.2/photoswipe.esm.min.js';
+      import PhotoSwipeLightbox from 'https://cdnjs.cloudflare.com/ajax/libs/photoswipe/{{ .Config.PhotoSwipeVersion }}/photoswipe-lightbox.esm.min.js';
+      import PhotoSwipe from 'https://cdnjs.cloudflare.com/ajax/libs/photoswipe/{{ .Config.PhotoSwipeVersion }}/photoswipe.esm.min.js';
 
       const lightbox = new PhotoSwipeLightbox({
         pswpModule: PhotoSwipe,
