--- a/templates/template.html
+++ b/templates/template.html
@@ -44,7 +44,7 @@
             </div>
             <div class="section-images section-images-{{ .Slug }}">
               {{- range .ImageSets }}
-              <div>
+              <div style="width: {{ .ThumbnailSize.Width }}px; height: {{ .ThumbnailSize.Height }}px">
               <a class="section-image"
                 href="photos/{{ $section.Slug }}/original/{{ .FileName }}"
                 data-pswp-src="photos/{{ $section.Slug }}/original/{{ .FileName }}"
